bug icone du au texte align dans zone

--- a/css/layout.css
+++ b/css/layout.css
@@ -208,6 +208,10 @@ margin-bottom: 40px;
 margin: 0px;
 }
 
+.zone-card p{
+    text-align: center;
+}
+
 .highlight-cities {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
